# book-ml-recommender

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  collect_data.py  compose.prod.yaml  compose.yaml  pyproject.toml  render.yaml  requirements.txt  train_models.py  wsgi.py
.github/: dependabot.yml
.github/workflows/: api-ci.yml  ci.yml  web-ci.yml
api/: .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
api/bookrec/: __main__.py  api.py  data.py
api/data/: README.md
api/scripts/: build_dataset.py  evaluate.py
api/tests/: conftest.py  test_api.py  test_data.py  test_recommender.py
api/tome/: __init__.py  __main__.py  api.py
bookrec/: __init__.py  __main__.py  app.py  data.py  recommender.py
data/: README.md  books.csv
docs/adr/: 0001-api-web-split.md  0002-server-side-api-fetch.md  0003-code-mit-data-cc-by-nc.md
notebooks/: book_recommendation_analysis.ipynb
scripts/: evaluate.py
src/: app.py  collect_data.py  train_models.py
static/: script.js  style.css
templates/: 404.html  base.html  book_detail.html  index.html
tests/: conftest.py  test_api.py  test_app.py  test_data.py  test_recommender.py  test_security.py
web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.mjs
web/app/: layout.tsx  not-found.tsx  page.tsx  theme.css
web/app/books/[id]/: page.tsx
web/app/components/: BookCard.tsx  BookRow.tsx  GenreFilter.tsx  SiteHeader.tsx
web/app/lib/: api.ts  format.ts
web/app/search/: page.tsx
web/src/app/: globals.css  layout.tsx  page.tsx  theme.css
web/src/app/books/[id]/: page.tsx
web/src/app/search/: page.tsx
web/src/components/: BookCover.tsx  BookGrid.tsx  BookRow.tsx  EmptyState.tsx  GenreFilter.tsx  RatingStars.tsx  SiteHeader.tsx
web/src/lib/: api.ts  schema.d.ts
web/tests/: BookCard.test.tsx  BookGrid.test.tsx  RatingStars.test.tsx  api.test.ts  format.test.ts
