[project]
name = "bookrec"
version = "1.0.0"
description = "Content-based book recommender using TF-IDF and cosine similarity"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ashwin Santosh" }]
dependencies = [
    "flask>=3.1",
    "pandas>=2.2",
    "numpy>=2.1",
    "scikit-learn>=1.6",
    "gunicorn>=23.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
collect = ["requests>=2.32"]
viz = ["matplotlib>=3.9"]
dev = ["pytest>=8.3", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bookrec"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
