[project]
name = "tome"
version = "2.0.0"
description = "book recommender api: tf-idf + cosine similarity over plot, author, and genre"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ashwin Santosh" }]
dependencies = [
    "fastapi>=0.138.0,<1",
    "uvicorn[standard]>=0.49.0,<1",
    "pandas>=3.0.3,<4",
    "numpy>=2.1,<3",
    "scikit-learn>=1.9,<2",
]

[project.optional-dependencies]
collect = ["requests>=2.32"]
viz = ["matplotlib>=3.11.0"]
dev = ["pytest>=9.1.1", "ruff>=0.8", "pip-audit>=2.10.1", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tome"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
